// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toolbar Alignment 1`] = `
<section>
  <h3>
    Left and right-aligned
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <button
      class="fd-button fd-button--compact fd-button--positive"
    >
      Accept
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact fd-button--reject"
    >
      Reject
    </button>
    

  </div>
  

  <h3>
    Left-aligned
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <button
      class="fd-button fd-button--compact fd-button--positive"
    >
      Accept
    </button>
    
    
    <button
      class="fd-button fd-button--compact fd-button--reject"
    >
      Reject
    </button>
    

  </div>
  

  <h3>
    Centered
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Centered
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    

  </div>
  

  <h3>
    Right-aligned
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Right-aligned
    </button>
    

  </div>
  

  <h3>
    Left, center, and right-aligned
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Left-aligned
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Centered
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Right-aligned
    </button>
    

  </div>
  

  <h3>
    Spacers
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Left-aligned
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Inside
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Inside
    </button>
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Right-aligned
    </button>
    

  </div>
  

  <h3>
    Spacers with fixed width
  </h3>
  

  <div
    class="fd-toolbar"
  >
    
    
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Accept
    </button>
    
    
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Reject
    </button>
    
    
    <span
      class="fd-toolbar__spacer fd-toolbar__spacer--fixed"
      style="width:50px;"
    />
    
    
    <button
      class="fd-button fd-button--compact"
    >
      Edit
    </button>
    
    
    <span
      class="fd-toolbar__spacer fd-toolbar__spacer--fixed"
      style="width:150px;"
    />
    
    
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Delete
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Toolbar Overflow 1`] = `
<section>
  <div
    style="height:250px"
  >
    

    <h3>
      Cozy example
    </h3>
    
    
    <div
      class="fd-toolbar fd-toolbar--cozy"
    >
      
        
      <span>
        Products (34)
      </span>
      
        
      <button
        class="fd-button fd-button--transparent"
      >
        Create
      </button>
      
        
      <span
        class="fd-toolbar__spacer"
      >
         
      </span>
      
        
      <button
        class="fd-button fd-button--transparent"
      >
        Save
      </button>
      
        
      <button
        class="fd-button fd-button--transparent"
      >
        Copy
      </button>
      
        
      <span
        class="fd-toolbar__separator"
      />
      
        
      <div
        class="fd-popover"
      >
        
            
        <div
          class="fd-popover__control"
        >
          
                
          <button
            aria-controls="wgxzK85912"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="More"
            class="fd-button fd-button--transparent"
            id="amr9034qihr"
            onclick="toggleElAttrs('wgxzK85912', ['aria-hidden']);toggleElAttrs('amr9034qihr', ['aria-expanded']);"
          >
            
                    
            <i
              class="sap-icon--overflow"
            />
            
                
          </button>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
          id="wgxzK85912"
        >
          
                
          <div
            class="fd-toolbar__overflow"
          >
            
                    
            <button
              class="fd-button fd-button--transparent fd-toolbar__overflow-button"
            >
              Edit
            </button>
            
                    
            <span
              class="fd-toolbar__separator"
            />
            
                    
            <button
              class="fd-button fd-button--transparent fd-toolbar__overflow-button"
            >
              Delete
            </button>
            
                    
            <span
              class="fd-toolbar__separator"
            />
            
                    
            <button
              class="fd-button fd-button--transparent fd-toolbar__overflow-button"
            >
              Assign
            </button>
            
                    
            <button
              class="fd-button fd-button--transparent fd-toolbar__overflow-button"
            >
              Exit
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    style="height:300px"
  >
    

    <h3>
      Compact example
    </h3>
    
    
    <div
      class="fd-toolbar"
    >
      
        
      <span>
        Products (34)
      </span>
      
        
      <button
        class="fd-button fd-button--compact fd-button--transparent"
      >
        Create
      </button>
      
        
      <span
        class="fd-toolbar__spacer "
      >
         
      </span>
      
        
      <button
        class="fd-button fd-button--compact fd-button--transparent"
      >
        Save
      </button>
      
        
      <button
        class="fd-button fd-button--compact fd-button--transparent"
      >
        Copy
      </button>
      
        
      <span
        class="fd-toolbar__separator"
      />
      
        
      <div
        class="fd-popover"
      >
        
            
        <div
          class="fd-popover__control"
        >
          
                
          <button
            aria-controls="mw0daw8d7h"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="More"
            class="fd-button fd-button--compact fd-button--transparent"
            id="31jr8oaufh"
            onclick="toggleElAttrs('mw0daw8d7h', ['aria-hidden']);toggleElAttrs('31jr8oaufh', ['aria-expanded']);"
          >
            
                    
            <i
              class="sap-icon--overflow"
            />
                
                
          </button>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
          id="mw0daw8d7h"
        >
          
                
          <div
            class="fd-toolbar__overflow"
          >
            
                    
            <label
              class="fd-label fd-toolbar__overflow-label"
            >
              Label
            </label>
            
                    
            <button
              class="fd-button fd-button--compact fd-button--transparent fd-toolbar__overflow-button"
            >
              Edit
            </button>
            
                    
            <span
              class="fd-toolbar__separator"
            />
            
                    
            <label
              class="fd-form-label fd-toolbar__overflow-form-label"
            >
              Form label
            </label>
            
                    
            <button
              class="fd-button fd-button--compact fd-button--transparent fd-toolbar__overflow-button"
            >
              Delete
            </button>
            
                    
            <span
              class="fd-toolbar__separator"
            />
            
                    
            <button
              class="fd-button fd-button--compact fd-button--transparent fd-toolbar__overflow-button"
            >
              Assign
            </button>
            
                    
            <button
              class="fd-button fd-button--compact fd-button--transparent fd-toolbar__overflow-button"
            >
              Exit
            </button>
            
                    
            <button
              class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-toolbar__overflow-button fd-toolbar__overflow-button--menu"
            >
              
                        
              <span
                class="fd-button__text"
              >
                Menu Button
              </span>
              
                        
              <i
                class="sap-icon--slim-arrow-down"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Toolbar Primary 1`] = `
<div
  class="fd-toolbar fd-toolbar--cozy"
>
  
    
  <span
    class="fd-toolbar__spacer"
  >
     
  </span>
  
    
  <button
    class="fd-button fd-button--transparent"
  >
    New
  </button>
  
    
  <button
    class="fd-button fd-button--transparent"
  >
    Open
  </button>
  
    
  <button
    class="fd-button fd-button--transparent"
  >
    Edit
  </button>
  
    
  <button
    class="fd-button fd-button--transparent"
  >
    Delete
  </button>
  
    
  <span
    class="fd-toolbar__separator"
  />
  
    
  <button
    aria-label="Survey"
    class="fd-button fd-button--transparent"
  >
    
        
    <i
      class="sap-icon--survey"
    />
    
    
  </button>
  
    
  <button
    aria-label="Pool"
    class="fd-button fd-button--transparent"
  >
    
        
    <i
      class="sap-icon--pool"
    />
    
    
  </button>
  
    
  <button
    aria-label="Chart"
    class="fd-button fd-button--transparent"
  >
    
        
    <i
      class="sap-icon--pie-chart"
    />
    
    
  </button>
  

</div>
`;

exports[`Storyshots Components/Toolbar Separators 1`] = `
<section>
  

  <div
    class="fd-toolbar fd-toolbar--cozy"
  >
    
    
    <button
      class="fd-button fd-button--positive"
    >
      Accept
    </button>
    
    
    <span
      class="fd-toolbar__separator"
    />
    
    
    <button
      class="fd-button fd-button--reject"
    >
      Reject
    </button>
    
    
    <span
      class="fd-toolbar__separator"
    />
    

  </div>
  

  <div
    class="fd-toolbar fd-toolbar--solid fd-toolbar--cozy"
  >
    
    
    <span
      class="fd-toolbar__spacer"
    />
    
    
    <span
      class="fd-toolbar__separator"
    />
    
    
    <button
      aria-label="Survey"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
        
      <i
        class="sap-icon--survey"
      />
      
    
    </button>
    
    
    <span
      class="fd-toolbar__separator"
    />
    
    
    <button
      aria-label="Pool"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
        
      <i
        class="sap-icon--pool"
      />
      
    
    </button>
    
    
    <button
      aria-label="Chart"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
        
      <i
        class="sap-icon--pie-chart"
      />
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Toolbar Types 1`] = `
<div
  style="padding: 1rem"
>
  
    
  <h3>
    Solid
  </h3>
  
    
  <div
    class="fd-toolbar fd-toolbar--solid"
  >
    
        
    <span>
      Products (23)
    </span>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Create
    </button>
    
        
    <span
      class="fd-toolbar__spacer "
    >
       
    </span>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Edit
    </button>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Delete
    </button>
    
        
    <span
      class="fd-toolbar__separator"
    />
    
        
    <button
      aria-label="Survey"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--survey"
      />
      
        
    </button>
    
        
    <button
      aria-label="Pool"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pool"
      />
      
        
    </button>
    
        
    <button
      aria-label="Chart"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pie-chart"
      />
      
        
    </button>
    
    
  </div>
  
    
  <h3>
    Transparent
  </h3>
  
    
  <div
    class="fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
  >
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Create
    </button>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Save
    </button>
    
        
    <span
      class="fd-toolbar__spacer "
    >
       
    </span>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Edit
    </button>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Delete
    </button>
    
        
    <span
      class="fd-toolbar__separator"
    />
    
        
    <button
      aria-label="Survey"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--survey"
      />
      
        
    </button>
    
        
    <button
      aria-label="Pool"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pool"
      />
      
        
    </button>
    
        
    <button
      aria-label="Chart"
      class="fd-button fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pie-chart"
      />
      
        
    </button>
    
    
  </div>
  
    
  <h3>
    Auto
  </h3>
  
    
  <div
    class="fd-toolbar fd-toolbar--clear fd-toolbar--auto"
  >
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Create
    </button>
    
        
    <span
      class="fd-toolbar__spacer "
    >
       
    </span>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Edit
    </button>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Delete
    </button>
    
        
    <span
      class="fd-toolbar__separator"
    />
    
        
    <button
      aria-label="Survey"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--survey"
      />
      
        
    </button>
    
        
    <button
      aria-label="Pool"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pool"
      />
      
        
    </button>
    
        
    <button
      aria-label="Chart"
      class="fd-button fd-button--compact fd-button--transparent"
    >
      
            
      <i
        class="sap-icon--pie-chart"
      />
      
        
    </button>
    
    
  </div>
  
    
  <h3>
    Info
  </h3>
  
    
  <div
    class="fd-toolbar fd-toolbar--info fd-toolbar--cozy"
  >
    3 item selected
  </div>
  
    
  <br />
  
    
  <div
    class="fd-toolbar fd-toolbar--info fd-toolbar--active"
  >
    3 item selected
  </div>
  
    
  <h3>
    Title
  </h3>
  
    
  <div
    class="fd-toolbar fd-toolbar--solid fd-toolbar--title fd-toolbar-active"
  >
    
        
    <h4>
      Producs (104)
    </h4>
    
        
    <span
      class="fd-toolbar__spacer "
    />
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Save
    </button>
    
        
    <button
      class="fd-button fd-button--compact fd-button--transparent"
    >
      Delete
    </button>
    
    
  </div>
  

</div>
`;
